# for-kiro

./: I BOB Lotin.docx  IMLOVIY_XATALAR_QISQACHA.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_GUIDE.md  I_BOB_Lotin_Imloviy_Tafsil.html  I_BOB_Lotin_Imloviy_Xatalar.html  I_BOB_Lotin_Xata_Tafsil.html  I_BOB_Lotin_Xatalar.html  MOD_STUDIO_EDITOR_SETTINGS_SPEC.md  PHASE_6_COMPLETION_REPORT.md  PHASE_6_SUMMARY.md  Project1_Database_Schema.html  Project1_README.md  Project1_UI_Architecture.html  RECOMMENDED_EDITOR_SETTINGS.md  TF_SOURCE_SETTINGS_REFERENCE.md  WINDOWS_BUILD_GUIDE.md  ai_agent_instructions.md  gradle_pipeline.py  test_gradle_pipeline.py  БОБ 2.docx
.github/workflows/: build-desktop.yml  ci.yml  release.yml
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/StreamingAssets/: version_database.json
Assets/UI/: ModStudioEditor_ViewportSnippet.uxml
Core/DataModels/: BiomeDataModel.cs  CreativeTabDataModel.cs  EntityDataModel.cs  RecipeDataModel.cs  ToolDataModel.cs
Core/Generation/: JavaCodeParser.cs  JavaSyntaxHighlighter.cs
Core/Services/: GradleCompiler.cs  ScaffoldGenerator.cs  StudioLogger.cs  WorkspaceManager.cs
Editor/Viewport/: VoxelViewportSetup.cs
Scripts/Core/: ProceduralCuboid.cs  VoxelPreviewRotator.cs  VoxelRuntimeGizmo.cs
UI/UXML/: ModStudioEditor.uxml  (+4 more)
minecraft-mod-ui/: .gitignore  README.md  RELEASE.md  SUPERIOR_RELEASE_UPGRADE_PLAN.md  build-windows.js  electron-builder-win.config.js  index.html  installer-script.nsi  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
minecraft-mod-ui/src-tauri/: Cargo.toml  tauri.conf.json
minecraft-mod-ui/src-tauri/schemas/: studio.project.schema.json
minecraft-mod-ui/src-tauri/src/: lib.rs  resources.rs
minecraft-mod-ui/src-tauri/src/codegen/: ast.rs  java_emitter.rs  mod.rs  safeguard.rs
minecraft-mod-ui/src-tauri/src/commands/: asset_commands.rs  asset_misc_commands.rs  build_commands.rs  codegen_commands.rs  dependency_commands.rs  enchantment_commands.rs  feature_commands.rs  graph_commands.rs  import_commands.rs  item_variants.rs  loot_table_commands.rs  mod.rs  project_commands.rs  recipe_commands.rs  resource_commands.rs  scaffold_commands.rs  validate_commands.rs  vanilla_plus_commands.rs  watcher_commands.rs  world_data_commands.rs  worldgen_commands.rs
minecraft-mod-ui/src-tauri/src/db/: mod.rs  operations.rs  schema.rs
minecraft-mod-ui/src-tauri/src/feature_system/: dependency_resolver.rs  mod.rs  skeleton.rs  vanilla_plus.rs  version_matrix.rs
minecraft-mod-ui/src-tauri/src/mod_importer/: mod.rs
minecraft-mod-ui/src-tauri/src/project_core/: errors.rs  index_cache.rs  loader.rs  migration.rs  mod.rs  model.rs  saver.rs  schema.rs  validator.rs  workspace.rs
minecraft-mod-ui/src-tauri/src/watcher/: mod.rs
minecraft-mod-ui/src-tauri/tests/: project_core_load_save_roundtrip.rs  project_core_workspace_detect.rs
minecraft-mod-ui/src-tauri/tests/fixtures/existing_fabric_mod/src/main/resources/: fabric.mod.json
minecraft-mod-ui/src-tauri/tests/fixtures/studio_project/: studio.project.json
schema/: README.md
studio-web/: app.js  index.html  styles.css
unity-creator-suite/: CreatorSuiteWindow.cs  README.md
(+202 files in other folders)
