[package]
name = "minecraft-mod-studio"
version = "1.0.0"
description = "Minecraft Mod Studio - All-in-One Visual Mod Editor"
authors = ["BobbleMMC"]
license = "MIT"
repository = "https://github.com/BobbleMMC/for-kiro"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
# Tauri core
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

# Utility
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs-next = "2.0"
