[package]
name = "minecraft-mod-studio"
version = "1.2.0"
description = "Minecraft Mod Studio - All-in-One Visual Mod Editor"
authors = ["BobbleMMC"]
license = "MIT"
repository = "https://github.com/BobbleMMC/for-kiro"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
# Tauri core
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

# Utility
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs-next = "2.0"

# Resource sidecar (studio.bin = gzipped tar)
flate2 = "1"
tar = "0.4"

# Mod / modpack import (JAR + ZIP files)
zip = { version = "2.2", default-features = false, features = ["deflate"] }



# ===== Release profile =====
# Optimised for minimum binary size + fast runtime. Together these flags
# typically shrink the Tauri release binary by 30–45% versus the default
# release profile, at the cost of longer compile times in CI.
[profile.release]
opt-level = "z"      # optimise for size (over speed)
lto = "fat"          # full link-time optimisation across crates
codegen-units = 1    # single codegen unit lets LTO be maximally effective
strip = "symbols"    # strip debug symbols from the final binary
panic = "abort"      # remove unwinding tables (huge win for size)
incremental = false  # incremental compilation conflicts with codegen-units=1

# Only used by `cargo build` (not `tauri build`) but matches release shape
# so local profiling has the same characteristics.
[profile.release-with-debug]
inherits = "release"
strip = "none"
debug = "line-tables-only"
